Animation fix on mobile

--- a/recipes/chicken.css
+++ b/recipes/chicken.css
@@ -493,6 +493,10 @@ p {
     transform-origin: top;
   }
 
+  h1:hover::before {
+    padding: 2px;
+  }
+
   .innerFooter {
     font-size: 32px;
   }
