--- a/recipes/tacos.css
+++ b/recipes/tacos.css
@@ -501,6 +501,10 @@ ul {
     transform-origin: top;
   }
 
+  h1:hover::before {
+    padding: 2px;
+  }
+
   .innerFooter {
     font-size: 32px;
   }
